--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:              CDN bungfrangki
 email:              halo@bungfrangki.com
 description:        A CDN Blog bungfrangki
 author:             bungfrangki
-baseurl:            ""
+baseurl:            "/bungfrangki.github.io"
 url:                "https://bungfrangki.github.io"
 
 
